frontend/src/styles/components/attraction_index.scss
.attractionsListings {
  left: 20px;
  margin-top: 175px;
  display: flex;
  position: relative;
  justify-content: space-between;
  flex-wrap: wrap;
  flex-direction: column; 
  width: 100%;

  div {
    margin-left: 25px;
    margin-bottom: 25px;
    height: 300px; 
    width: 650px;
    border-radius: 10px;
    background-color: oldlace;
  }

  .attractionsImage {
    margin: 20px 10px 10px 10px;
    // width: 300px;
    height: 260px;
    width: 280px;
    border-radius: 10px;
  }

  .attractionTitle{
    font-size: x-large;
    font-weight: 800;
  }

  .attractionAddress{
    font-size: large;
  }

  .attractionDescription{
    font-size: smaller;
    margin-top: 10px;
  }

  .attractionRating{
    margin-top: 40px;
  }
  .attractionContent {
    margin-top: 5%;
    float: left;
    // width: 50%;
    width: 225px;
    height: 240px;
    position: absolute;
    overflow: hidden;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: large;
    color: black;
  }

  .attractionPic {
    float: right;
    width: 325px;
    border-radius: 10px;
    display: flex;
    align-content: center;
  }
}
  .attraction-index-item{
    border-radius: 10px;
   
  }


.searchField {
  height: 40px;
  width: 400px;
}

.categoryField {
  height: 46px;
  width: 150px;

}

.ratingField {
  height: 46px;
  width: 150px;
}

.searchButton {
  height: 46px;
  width: 150px;
}

.attractions-container {
  background-attachment: fixed;
  width: 100%;
  height: 100%; 
  min-height: 100vh; 
  background-image: url(https://www.mensjournal.com/wp-content/uploads/2019/12/Desert-Road-Trip-6-dino-reichmuth-A5rCN8626Ck-unsplash.jpg);


  .searchBar {
    padding-top: 85px;
    position: fixed;
    left: 24px;
    z-index: 2;
  }
}

.attractions-main {  

  map {
    position: fixed;
    top: 190px;
    left: 750px;
   
  }
}


.attraction-search-form input , select{
  margin: 7px;
  border-radius: 10px;
  box-shadow: 1px 1.5px;
  background-color: rgba(146, 146, 146, 0.726);
  font-size: 20px;
  color: rgb(7, 6, 6);
  font-weight: bold;
  font-family: $pacificoc;;
  
    
}
.attraction-search-form input::placeholder {
  color: rgb(7, 6, 6);
  font-weight: bold;
  font-family: $pacificoc;;
}

.search-result-count {
  display: flex;
  position: fixed;
  top: 150px;
  left: 37px;
  background-color: rgba(146, 146, 146, 0.726);;
  padding: 5px;
  border-radius: 8px;
}

